# ai-infosec

./: .gitignore  README.md  pyproject.toml  run_evaluation.py
notebooks/: demo_march13.ipynb
results/: demo_march13.md  evaluation_20260316_164303.json  evaluation_20260316_165008.json  evaluation_results_20260313_154316.json  evaluation_results_latest.json  official_aligned_20_from_runs.json  official_reference_metrics_claude3opus_v1.json
results/baseline/: run_20260313_135011.json  run_20260313_135606.json  run_20260313_135637.json  run_20260313_140229.json  run_20260313_140754.json  run_20260313_141703.json  run_20260313_141832.json  run_20260313_142435.json  run_20260316_162246.json  run_20260316_162613.json  run_20260318_145359_753185.json  run_20260318_145359_764097.json  run_20260318_145359_773079.json  run_20260318_145440_569507.json  run_20260318_145440_580574.json  run_20260318_145440_589499.json  run_20260318_145459_831044.json  run_20260318_145459_842010.json  run_20260318_145459_851278.json  run_20260318_145934_104440.json  run_20260318_145934_117328.json  run_20260318_145934_127333.json  run_20260318_150027_593497.json  run_20260318_150100_459962.json  run_20260318_150100_485567.json  run_20260318_150447_584511.json  run_20260318_150543_845070.json  run_20260318_150701_575604.json  run_20260318_150742_136031.json  (+7 more)
scripts/: compute_agentdojo_metrics.py  run_agentdojo_official.sh  run_baseline.sh  run_defended.sh  run_mvp_matrix.py  run_send_action_repro.py  summarize_attack_breakdown.py  summarize_results.py
src/: __init__.py  config.py
(+240 files in other folders)
